[package]
name = "turbo_zk_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
webrtc = "0.11.0"
webrtc-dtls = "0.10.0"
webrtc-ice = "0.11.0"
webrtc-util = "0.9.0"
x25519-dalek = "2.0.1"
bytes = "1.0"
anyhow = "1.0.93"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
bellman = "0.14.0"
rand = "0.8.5"
bls12_381 = "0.8.0"
ff = "0.13.0"
tungstenite = "0.18.0"
tokio-tungstenite = "0.24.0"
futures-util = "0.3.31"
url = "2.5.4"


[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmarks"
harness = false
